dosya senkrazisyonu eklendi