@@ -10,16 +10,22 @@ public class Main
     {
         LinkedHashMap<Path,Path> copys = new LinkedHashMap<>(5);
 
-        try(DirectoryStream<Path> stream = Files.newDirectoryStream(Paths.get("C:\\Users\\altay\\Desktop\\source")))
-        {
-            stream.forEach(path ->
-                    copys.put(path,Path.of(path.toString().replace("source","target"))));
-        }
-        catch (Exception e)
-        {
-            throw new RuntimeException(e);
-        }
-        dosya_islemleri.yedekle(copys);
+//        try(DirectoryStream<Path> stream = Files.newDirectoryStream(Paths.get("C:\\Users\\altay\\Desktop\\source")))
+//        {
+//            stream.forEach(path ->{
+//                    copys.put(path,Path.of(path.toString().replace("source","target")));
+//            });
+//        }
+//        catch (Exception e)
+//        {
+//            throw new RuntimeException(e);
+//        }
+//        dosya_islemleri.yedekle(copys);
+
+        LinkedHashMap<Path,Path> watching = new LinkedHashMap<>(1);
+        watching.put(Paths.get("C:\\Users\\altay\\Desktop\\source"),Paths.get("C:\\Users\\altay\\Desktop\\target"));
+
+        dosya_islemleri.file_tracker tracker = new dosya_islemleri.file_tracker(watching);
         System.out.println("Hello world!");
     }
 }
